--- a/data/logos.yml
+++ b/data/logos.yml
@@ -1,16 +1,19 @@
 sponsors:
-  - name: groppalli
+  - name: fondazione
     image: logos/s-01.png
-    link: http://www.groppalli.it/
-  - name: tb
+    link:
+  - name: iren
     image: logos/s-02.png
-    link: http://www.tecnoborgo.com/
-  - name: alphaville
+    link:
+  - name: coop
+    image: logos/s-03.png
+    link:
+  - name: abi-coop
     image: logos/s-04.png
-    link: https://alphavillepc.wordpress.com/
-  - name: ferranti
+    link:
+  - name: bulla
     image: logos/s-05.png
-    link: http://www.ferrantimusica.it/
+    link:
 
 collaborators:
   - name: arci
@@ -34,9 +37,30 @@ collaborators:
   - name: orzo rock
     image: logos/c-07.png
     link: https://www.facebook.com/orzorockmusic
-  - name: naturone
+  - name: elettroshoking
     image: logos/c-08.png
-    link: https://www.facebook.com/pages/Naturone-Piacenza/408116475986674
-  - name: rock al port
+    link:
+  - name: uninoise
     image: logos/c-09.png
-    link: https://www.facebook.com/rockalport
+    link:
+  - name: soundround
+    image: logos/c-10.png
+    link:
+  - name: spaziodue
+    image: logos/c-11.png
+    link:
+  - name: bus1
+    image: logos/c-12.png
+    link:
+  - name: elfo
+    image: logos/c-13.png
+    link:
+  - name: gedinfo
+    image: logos/c-14.png
+    link:
+  - name: bangbang
+    image: logos/c-15.png
+    link:
+  - name: effetre
+    image: logos/c-16.png
+    link:
