--- a/data/expo.yml
+++ b/data/expo.yml
@@ -1,32 +1,28 @@
-- bandoneon
-- inorbit
-- gioielli
-- yuma
-- mariefrance
-- cafferini
-- foglie
-- alecanu
-- berlikete
-- kollavinilica
-- wooddesign
-- bookbank
-- sottoterra
-- officinegutenberg
-- studiobrado
-- officinebaco
-- quanticart
-- kairos
-- stanzadidanza
-- pinecreek
-- desertfox
-- retrovox
-- orzo
-- collettivogaragistico
-- collettivoladefense
-- pcmusic
+- adriano
+- anfibio
+- apex
 - arcigay
-- fai
-- foic
+- berlikete
+- cafferini
+- casucci
+- cloud
+- dea
+- desertfox
+- ef
 - emergency
-- amnesty
-- arcipelago
+- fai
+- foglie
+- foic
+- inorbit
+- kollavinilica
+- marie
+- matteo
+- miccio
+- officinebaco
+- orzo
+- quanticart
+- sancho
+- stanzadidanza
+- viaggiatrici
+- wooddesign
+- yellow
