--- a/data/rassegna.yml
+++ b/data/rassegna.yml
@@ -11,6 +11,8 @@
       link: download/rassegna/2016/04.jpg
     - image: rassegna/2016/05.jpg
       link: download/rassegna/2016/05.pdf
+    - image: rassegna/2016/06.jpg
+      link: download/rassegna/2016/160912piacenza_22.pdf
 - title: Rassegna Stampa 2015
   reverse: true
   press:
