--- a/data/rassegna.yml
+++ b/data/rassegna.yml
@@ -13,6 +13,8 @@
       link: download/rassegna/2016/05.pdf
     - image: rassegna/2016/06.jpg
       link: download/rassegna/2016/160912piacenza_22.pdf
+    - image: rassegna/2016/07.jpg
+      link: download/rassegna/2016/160915piacenza_32.pdf
 - title: Rassegna Stampa 2015
   reverse: true
   press:
