--- a/data/rassegna.yml
+++ b/data/rassegna.yml
@@ -15,6 +15,8 @@
       link: download/rassegna/2016/160912piacenza_22.pdf
     - image: rassegna/2016/07.jpg
       link: download/rassegna/2016/160915piacenza_32.pdf
+    - image: rassegna/2016/08.jpg
+      link: download/rassegna/2016/160916piacenza_23.pdf
 - title: Rassegna Stampa 2015
   reverse: true
   press:
