--- a/data/rassegna.yml
+++ b/data/rassegna.yml
@@ -17,6 +17,8 @@
       link: download/rassegna/2016/160915piacenza_32.pdf
     - image: rassegna/2016/08.jpg
       link: download/rassegna/2016/160916piacenza_23.pdf
+    - image: rassegna/2016/09.jpg
+      link: download/rassegna/2016/160918piacenza_40.pdf
 - title: Rassegna Stampa 2015
   reverse: true
   press:
